Authenticating user and genereting and validating JWT token.
